--- a/package.json
+++ b/package.json
@@ -24,16 +24,15 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.5",
-    "@emotion/styled": "^10.0.5",
-    "babel-plugin-styled-components": "^1.7.1",
+    "@types/styled-components": "^4.1.10",
+    "babel-plugin-styled-components": "^1.10.0",
     "classnames": "^2.2.6",
     "gatsby": "^2.0.85",
     "gatsby-image": "^2.0.5",
     "gatsby-plugin-canonical-urls": "^2.0.5",
-    "gatsby-plugin-emotion": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.5",
+    "gatsby-plugin-styled-components": "^3.0.5",
     "gatsby-plugin-typescript": "^2.0.0",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.1",
@@ -52,6 +51,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
+    "styled-components": "^4.1.3",
     "typescript": "^3.0.3"
   },
   "devDependencies": {
