--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
-  "semi": false,
   "tabWidth": 2,
-  "printWidth": 140,
   "singleQuote": true,
-  "trailingComma": "none"
+  "trailingComma": "all",
+  "bracketSpacing": false,
+  "jsxBracketSameLine": true,
+  "printWidth": 100,
+  "semi": false
 }
