--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "jeffrafter.com",
-  "description": "Blog",
+  "name": "jeffrafter",
+  "description": "Jeff Rafter's blog",
   "version": "1.0.0",
   "private": true,
   "author": "Jeff Rafter <jeffrafter@gmail.com>",
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "blog",
+    "typescript",
+    "styled-components"
   ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
     "clean": "rimraf public",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -b master",
     "dev": "gatsby develop",
     "format": "prettier --write \"src/**/*.{ts,tsx,md}\"",
     "lint": "tslint 'src/**/*.{ts,tsx}' -p tsconfig.json",
@@ -28,24 +31,26 @@
     "babel-plugin-styled-components": "^1.10.0",
     "classnames": "^2.2.6",
     "gatsby": "^2.0.85",
-    "gatsby-image": "^2.0.5",
+    "gatsby-image": "^2.0.30",
     "gatsby-plugin-canonical-urls": "^2.0.5",
+    "gatsby-plugin-feed": "^2.0.13",
+    "gatsby-plugin-google-analytics": "^2.0.14",
+    "gatsby-plugin-manifest": "^2.0.19",
     "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.0.5",
+    "gatsby-plugin-sharp": "^2.0.25",
     "gatsby-plugin-styled-components": "^3.0.5",
     "gatsby-plugin-typescript": "^2.0.0",
+    "gatsby-remark-autolink-headers": "^2.0.14",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.1",
     "gatsby-remark-prismjs": "^3.0.0",
     "gatsby-remark-responsive-iframe": "^2.0.5",
     "gatsby-remark-smartypants": "^2.0.5",
-    "gatsby-source-filesystem": "^2.0.1",
+    "gatsby-remark-tufte": "file:../gatsby-remark-tufte",
+    "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-json": "^2.1.1",
     "gatsby-transformer-remark": "^2.1.3",
     "gatsby-transformer-sharp": "^2.1.1",
-    "modern-normalize": "^0.5.0",
-    "normalize.css": "^8.0.0",
-    "polished": "^2.0.3",
     "prism-themes": "^1.0.1",
     "prismjs": "^1.15.0",
     "react": "^16.5.2",
@@ -60,7 +65,7 @@
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "@types/react-helmet": "^5.0.7",
-    "gh-pages": "^2.0.0",
+    "gh-pages": "^2.0.1",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
     "tslint": "^5.11.0",
