--- a/package.json
+++ b/package.json
@@ -27,9 +27,6 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
-    "@types/styled-components": "^4.1.10",
-    "babel-plugin-styled-components": "^1.10.0",
-    "classnames": "^2.2.6",
     "gatsby": "^2.0.85",
     "gatsby-image": "^2.0.30",
     "gatsby-plugin-canonical-urls": "^2.0.5",
@@ -57,10 +54,15 @@
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
     "styled-components": "^4.1.3",
+    "babel-plugin-styled-components": "^1.10.0",
+    "classnames": "^2.2.6",
+    "three": "^0.102.1",
+    "three.js": "^0.77.1",
     "typescript": "^3.0.3"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.6",
+    "@types/styled-components": "^4.1.10",
     "@types/node": "^10.10.1",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
