--- a/package.json
+++ b/package.json
@@ -27,52 +27,56 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
-    "gatsby": "^2.0.85",
-    "gatsby-image": "^2.0.30",
-    "gatsby-plugin-canonical-urls": "^2.0.5",
-    "gatsby-plugin-feed": "^2.0.13",
-    "gatsby-plugin-google-analytics": "^2.0.14",
-    "gatsby-plugin-manifest": "^2.0.19",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.0.25",
-    "gatsby-plugin-styled-components": "^3.0.5",
-    "gatsby-plugin-typescript": "^2.0.0",
-    "gatsby-remark-autolink-headers": "^2.0.14",
-    "gatsby-remark-copy-linked-files": "^2.0.5",
-    "gatsby-remark-images": "^2.0.1",
-    "gatsby-remark-prismjs": "^3.0.0",
-    "gatsby-remark-responsive-iframe": "^2.0.5",
-    "gatsby-remark-smartypants": "^2.0.5",
-    "gatsby-remark-tufte": "file:../gatsby-remark-tufte",
-    "gatsby-source-filesystem": "^2.0.23",
-    "gatsby-transformer-json": "^2.1.1",
-    "gatsby-transformer-remark": "^2.1.3",
-    "gatsby-transformer-sharp": "^2.1.1",
-    "prism-themes": "^1.0.1",
-    "prismjs": "^1.15.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-helmet": "^5.2.0",
-    "styled-components": "^4.1.3",
-    "babel-plugin-styled-components": "^1.10.0",
+    "@tufte-markdown/remark-figure-parser": "^1.0.0",
+    "@tufte-markdown/remark-figure-transformer": "^1.0.0",
+    "@tufte-markdown/remark-sidenotes": "^1.0.0",
+    "@tufte-markdown/remark-wrap-in-section": "^2.0.1",
+    "babel-plugin-styled-components": "^1.10.6",
     "classnames": "^2.2.6",
+    "gatsby": "^2.15.18",
+    "gatsby-image": "^2.2.19",
+    "gatsby-plugin-canonical-urls": "^2.1.7",
+    "gatsby-plugin-feed": "^2.3.12",
+    "gatsby-plugin-google-analytics": "^2.1.16",
+    "gatsby-plugin-manifest": "^2.2.17",
+    "gatsby-plugin-react-helmet": "^3.1.7",
+    "gatsby-plugin-sharp": "^2.2.24",
+    "gatsby-plugin-styled-components": "^3.1.5",
+    "gatsby-plugin-typescript": "^2.1.8",
+    "gatsby-remark-autolink-headers": "^2.1.10",
+    "gatsby-remark-copy-linked-files": "^2.1.19",
+    "gatsby-remark-images": "^2.0.6",
+    "gatsby-remark-prismjs": "^3.3.13",
+    "gatsby-remark-responsive-iframe": "^2.2.16",
+    "gatsby-remark-smartypants": "^2.1.8",
+    "gatsby-remark-tufte": "1.0.4",
+    "gatsby-source-filesystem": "^2.1.24",
+    "gatsby-transformer-json": "^2.2.8",
+    "gatsby-transformer-remark": "^2.6.23",
+    "gatsby-transformer-sharp": "^2.2.15",
+    "prism-themes": "^1.1.0",
+    "prismjs": "^1.17.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
+    "styled-components": "^4.3.2",
     "three": "^0.102.1",
     "three.js": "^0.77.1",
-    "typescript": "^3.0.3"
+    "typescript": "^3.6.3"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.6",
-    "@types/styled-components": "^4.1.10",
-    "@types/node": "^10.10.1",
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.7",
-    "@types/react-helmet": "^5.0.7",
-    "gh-pages": "^2.0.1",
-    "prettier": "^1.14.2",
-    "rimraf": "^2.6.2",
-    "tslint": "^5.11.0",
+    "@types/classnames": "^2.2.9",
+    "@types/node": "^10.14.18",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-helmet": "^5.0.10",
+    "@types/styled-components": "^4.1.19",
+    "gh-pages": "^2.1.1",
+    "prettier": "^1.18.2",
+    "rimraf": "^2.7.1",
+    "tslint": "^5.20.0",
     "tslint-config-blvd": "^1.2.1",
-    "tslint-config-prettier": "^1.15.0",
-    "tslint-plugin-prettier": "^2.0.0"
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1"
   }
 }
