--- a/package.json
+++ b/package.json
@@ -24,59 +24,54 @@
     "type-check": "tsc"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=12.0.0"
   },
-  "dependencies": {
-    "@tufte-markdown/remark-figure-parser": "^1.0.0",
+  "devDependencies": {
     "@tufte-markdown/remark-figure-transformer": "^1.0.0",
     "@tufte-markdown/remark-sidenotes": "^1.0.0",
     "@tufte-markdown/remark-wrap-in-section": "^2.0.1",
+    "@types/classnames": "^2.2.9",
+    "@types/node": "^12.12.7",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-helmet": "^5.0.14",
+    "@types/styled-components": "^4.4.0",
     "babel-plugin-styled-components": "^1.10.6",
     "classnames": "^2.2.6",
-    "gatsby": "^2.15.18",
-    "gatsby-image": "^2.2.19",
-    "gatsby-plugin-canonical-urls": "^2.1.7",
-    "gatsby-plugin-feed": "^2.3.12",
-    "gatsby-plugin-google-analytics": "^2.1.16",
-    "gatsby-plugin-manifest": "^2.2.17",
-    "gatsby-plugin-react-helmet": "^3.1.7",
-    "gatsby-plugin-sharp": "^2.2.24",
-    "gatsby-plugin-styled-components": "^3.1.5",
-    "gatsby-plugin-typescript": "^2.1.8",
-    "gatsby-remark-autolink-headers": "^2.1.10",
-    "gatsby-remark-copy-linked-files": "^2.1.19",
-    "gatsby-remark-images": "^2.0.6",
-    "gatsby-remark-prismjs": "^3.3.13",
-    "gatsby-remark-responsive-iframe": "^2.2.16",
-    "gatsby-remark-smartypants": "^2.1.8",
-    "gatsby-remark-tufte": "1.0.4",
-    "gatsby-source-filesystem": "^2.1.24",
-    "gatsby-transformer-json": "^2.2.8",
-    "gatsby-transformer-remark": "^2.6.23",
-    "gatsby-transformer-sharp": "^2.2.15",
-    "prism-themes": "^1.1.0",
-    "prismjs": "^1.17.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1",
-    "styled-components": "^4.3.2",
-    "three": "^0.102.1",
-    "three.js": "^0.77.1",
-    "typescript": "^3.6.3"
-  },
-  "devDependencies": {
-    "@types/classnames": "^2.2.9",
-    "@types/node": "^10.14.18",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-helmet": "^5.0.10",
-    "@types/styled-components": "^4.1.19",
+    "gatsby": "^2.17.11",
+    "gatsby-image": "^2.2.31",
+    "gatsby-plugin-canonical-urls": "^2.1.14",
+    "gatsby-plugin-feed": "^2.3.20",
+    "gatsby-plugin-google-analytics": "^2.1.25",
+    "gatsby-plugin-manifest": "^2.2.27",
+    "gatsby-plugin-react-helmet": "^3.1.14",
+    "gatsby-plugin-sharp": "^2.2.37",
+    "gatsby-plugin-styled-components": "^3.1.12",
+    "gatsby-plugin-typescript": "^2.1.16",
+    "gatsby-remark-autolink-headers": "^2.1.17",
+    "gatsby-remark-copy-linked-files": "^2.1.29",
+    "gatsby-remark-images": "^3.1.30",
+    "gatsby-remark-prismjs": "^3.3.22",
+    "gatsby-remark-responsive-iframe": "^2.2.26",
+    "gatsby-remark-smartypants": "^2.1.15",
+    "gatsby-remark-tufte": "^1.0.4",
+    "gatsby-source-filesystem": "^2.1.36",
+    "gatsby-transformer-json": "^2.2.17",
+    "gatsby-transformer-remark": "^2.6.33",
+    "gatsby-transformer-sharp": "^2.3.3",
     "gh-pages": "^2.1.1",
-    "prettier": "^1.18.2",
-    "rimraf": "^2.7.1",
-    "tslint": "^5.20.0",
+    "prettier": "^1.19.1",
+    "prism-themes": "^1.3.0",
+    "prismjs": "^1.17.1",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-helmet": "^5.2.1",
+    "rimraf": "^3.0.0",
+    "styled-components": "^4.4.1",
+    "tslint": "^5.20.1",
     "tslint-config-blvd": "^1.2.1",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1"
+    "tslint-plugin-prettier": "^2.0.1",
+    "typescript": "^3.7.2"
   }
 }
