--- a/package.json
+++ b/package.json
@@ -73,5 +73,9 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.7.2"
+  },
+  "dependencies": {
+    "@reach/router": "^1.2.1",
+    "query-string": "^6.9.0"
   }
 }
