Adding in esp8266

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-  "tabWidth": 2,
+  "endOfLine": "lf",
+  "semi": false,
   "singleQuote": true,
+  "tabWidth": 2,
   "trailingComma": "all",
   "bracketSpacing": false,
   "jsxBracketSameLine": true,
-  "printWidth": 100,
-  "semi": false
+  "printWidth": 120
 }
