--- a/package.json
+++ b/package.json
@@ -33,8 +33,13 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-helmet": "^5.0.14",
     "@types/styled-components": "^4.4.0",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
     "babel-plugin-styled-components": "^1.10.6",
     "classnames": "^2.2.6",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "gatsby": "^2.20.12",
     "gatsby-image": "^2.2.31",
     "gatsby-plugin-canonical-urls": "^2.1.14",
