--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -15,9 +15,11 @@ jobs:
         with:
           node-version: 12
 
+      # https://github.com/pkgjs/gh-pages/blob/master/entrypoint.sh
+      # git remote set-url origin "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$INPUT_REPO.git"
       - run: |
-          git config --local user.email "jeffrafter@gmail.com"
-          git config --local user.name "Jeff Rafter"
+          git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
+          git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
         name: Configure git
 
       # https://docs.github.com/en/actions/configuring-and-managing-workflows/caching-dependencies-to-speed-up-workflows#example-using-the-cache-action
@@ -67,11 +69,9 @@ jobs:
         name: Test
 
       # https://www.gatsbyjs.org/docs/page-build-optimizations-for-incremental-data-changes/
-      - run: npm run build
-        name: Build
+      - run: npm run deploy
+        name: Deploy
         env:
           GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES: true
           NODE_ENV: production
-
-      - run: npm run deploy
-        name: Deploy
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
