--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
-    "clean": "rimraf public",
+    "clean": "rimraf public && rimraf .cache",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public -b master",
     "dev": "gatsby develop",
     "format": "prettier --write \"src/**/*.{ts,tsx,md}\"",
