--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   "engines": {
     "node": ">=12.0.0"
   },
+  "resolutions": {
+    "minipass": "2.7.0",
+    "sharp": "^0.29.0"
+  },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
     "@types/node": "^12.12.7",
@@ -80,6 +84,7 @@
     "@github/g-emoji-element": "^1.1.4",
     "@reach/router": "^1.2.1",
     "github-markdown-css": "^4.0.0",
-    "query-string": "^6.9.0"
+    "query-string": "^6.9.0",
+    "sharp": "^0.29.0"
   }
 }
